syntax = "proto3";

package auth.v1;

import "google/protobuf/empty.proto";

option go_package = "heytom-auth/api/auth/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.auth.v1";
option java_outer_classname = "AuthProtoV1";



// 分页请求
message PageRequest {
  int32 page_index = 1;
  int32 page_size = 2;
}