syntax = "proto3";

package auth.v1;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "auth/v1/basic.proto";

option go_package = "heytom-auth/api/auth/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.auth.v1";
option java_outer_classname = "AuthProtoV1";

// 组织服务
service Organization {
  rpc PageList(PageOrganizationRequest) returns (PageOrganizationResponse) {
    option (google.api.http) = {
      get: "/organization/list"
    };
  }
  rpc Get(GetOrganizationRequest) returns (OrganizationInfo) {
    option (google.api.http) = {
      get: "/organization/{id}"
    };
  }
  rpc Create(CreateOrganizationRequest) returns (OrganizationInfo) {
    option (google.api.http) = {
      post: "/organization"
      body: "*"
    };
  }
  rpc Update(UpdateOrganizationRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/organization/{id}"
      body: "*"
    };
  }
  rpc Delete(DeleteOrganizationRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/organization/{id}"
    };
  }
}

// 组织相关消息
message OrganizationInfo {
  int64 id = 1;
  string name = 2;
  string code = 3;
  int64 parent_id = 4;
  string description = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message DeleteOrganizationRequest {
  int64 id = 1;
}

message CreateOrganizationRequest {
  string name = 1;
  string code = 2;
  int64 parent_id = 3;
  string description = 4;
}

message UpdateOrganizationRequest {
  int64 id = 1;
  string name = 2;
  string code = 3;
  int64 parent_id = 4;
  string description = 5;
}

message GetOrganizationRequest {
  int64 id = 1;
}

message PageOrganizationRequest {
  PageRequest page = 1;
}

message PageOrganizationResponse {
  int64 total = 1;
  repeated OrganizationInfo organizations = 2;
}
